feat : Token 원시값 포장