@@ -1,17 +1,20 @@
 package domain;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Tokens {
+    private static final String DELIMITER = " ";
     private static final String EMPTY_INPUT_ERROR_MESSAGE = "입력이 없습니다.";
-    private static final String OPERAND_ERROR_MESSAGE = "올바른 피연산자가 아닙니다.";
-    private static final String OPERATOR_ERROR_MESSAGE = "올바른 연산자가 아닙니다.";
-    private static final String OPERAND_PATTERN = "[0-9]+";
-    private static final String OPERATOR_PATTERN = "[+\\-*/]";
-    private final List<String> tokens;
+    private final List<Token> tokens;
 
     public Tokens(String expression) {
-        this.tokens = List.of(expression.split(" "));
+        this.tokens = expression.isEmpty() ? Collections.emptyList() : Arrays.stream(expression.split(DELIMITER))
+                                                                             .map(Token::new)
+                                                                             .collect(Collectors.toList());
+
     }
 
     public void validate() {
@@ -27,14 +30,12 @@ public class Tokens {
 
     private void checkTokens() {
         for (int i = 0; i < tokens.size(); i += 2) {
-            validateToken(tokens.get(i), OPERAND_PATTERN, OPERAND_ERROR_MESSAGE);
-            validateToken(tokens.get(i + 1), OPERATOR_PATTERN, OPERATOR_ERROR_MESSAGE);
+            tokens.get(i).validateOperand();
+            tokens.get(i + 1).validateOperator();
         }
     }
 
-    private void validateToken(String token, String pattern, String errorMessage) {
-        if (!token.matches(pattern)) {
-            throw new IllegalArgumentException(errorMessage);
-        }
+    public List<Token> getTokens() {
+        return tokens;
     }
 }
